# reports

./: README.md  main.py  pyproject.toml
static/: script.js
templates/: base.html  mod.html  no_reports.html
